--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
   "IpRepositorySettings": {
-    "FilePath": "geo-US.csv"
+    "ZipPath": "geo-US.csv.zip",
+    "FileName": "geo-US.csv"
   }
 }
